# qvideochat

./: .env.template  .gitignore  .gitmodules  .isort.cfg  .ruff.toml  README.md  main.py  pyproject.toml
src/: main.py
src/designs/: videochat.ui
src/qvideochat/: main.py
src/qvideochat/client/: grpc.py
src/qvideochat/core/: config.py
src/qvideochat/ui/: videochat.py
