[project]
name = "qvideochat"
version = "0.1.0"
description = "Qt-based application implementing a chatroom with video (camera) sharing. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]