[project]
name = "qvideochat"
version = "0.1.0"
description = "Qt-based application implementing a chatroom with video (camera) sharing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.8.2",
]
