[project]
name = "qvideochat"
version = "0.1.0"
description = "Qt-based application implementing a chatroom with video (camera) sharing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.29.1",
    "pyqt6>=6.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qvideochat"]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "ruff>=0.8.2",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.8.2",
]
